Fixed alignment issues on people/affiliates. Fixed function call in affiliateadmin controller.

--- a/public/css/research.css
+++ b/public/css/research.css
@@ -1,5 +1,5 @@
 .right-column{
-	padding-top: 30px;
+	margin-top: -5px;
 }
 
 .right-column a{
