--- a/public/css/side-navigation.css
+++ b/public/css/side-navigation.css
@@ -16,6 +16,7 @@
 	font-size: 16px;
 	border-bottom: 1px dotted #000;
 	width: 100%;
+	margin-top: 16px;
 }
 
 .general-info {
